Fixed button alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ body {
 .submit-btn {
   position: relative;
   font-family: 'IBM Plex Sans', sans-serif;
-  left: 106px;
+  left: 108px;
   color: white;
   font-weight: 600;
   text-transform: uppercase;
